[package]
name = "eltsu7-todo"
description = "Simple TODO app to keep track of tasks."
authors = ["Eeli Hernesniemi"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
home = "0.5.9"
ratatui = "0.26.0"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
